<?xml version="1.0"?>
<package format="2">
  <name>roslog_fmt</name>
  <version>0.0.0</version>
  <description>The roslog_fmt package</description>

  <maintainer email="rohan@osrfoundation.org">rohan</maintainer>


  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
