<?xml version="1.0"?>
<package format="2">
  <name>ros2log</name>
  <version>0.0.0</version>
  <description>The ros2log package</description>

  <maintainer email="rohan@osrfoundation.org">rohan</maintainer>


  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
