<package format="2">
  <name>rosgraph_msgs</name>
  <version>1.11.2</version>
  <description>
     Messages relating to the ROS Computation Graph. These are generally considered to be low-level messages that end users do not interact with. This is a port of these messages from ROS1 to ROS2.
  </description>
  <maintainer email="rohan@osrfoundation.org">Rohan Agrawal</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/rosgraph_msgs</url>
  <author>Ken Conley</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
